Criando a pagina de registrar e mostrar tarefas, junto com novas funcionalidades

--- a/back-end/src/views/includes/nav.ejs
+++ b/back-end/src/views/includes/nav.ejs
@@ -5,7 +5,7 @@
     <ul>
         <% if(user){ %>
             <li>
-                <a href="/tarefas">Cadastrar Tarefas</a>
+                <a href="/tarefa">Cadastrar Tarefas</a>
                 <a href="/login/logout">Sair</a>
             </li>
         <% }else{ %>
