--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -49,6 +49,7 @@ h1{
     text-align: center;
     font-size: 2.5em;
     margin-top: 40px;
+    margin-bottom: 10px;
 }
 
 p{
@@ -67,7 +68,7 @@ label{
     margin: 7px 7px;
 }
 
-input{
+input, select{
     display: block;
     height: 36px;
     width: 520px;
@@ -142,4 +143,60 @@ nav a{
     font-size: 1.3em;
     text-align: center;
     margin: 22px 0px;
+}
+
+.tarefa{
+    height: 620px;
+}
+
+.home{
+    width: 100%;
+    height: 100%;
+    box-shadow: none;
+}
+
+table{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-spacing: 15px;
+    margin-top: 30px;
+}
+
+tr{
+    margin: 10px 2px;
+}
+
+td{
+    padding: 10px;
+    text-align: center;
+    font-family: var(--font-principal);
+    color: var(--secondary);
+    font-size: 1.5em;
+}
+
+.editar a{
+    margin-top: 30px;
+    font-size: 1.3em;
+    color: rgb(56, 154, 56);
+    font-family: var(--font-principal);
+    text-decoration: none;
+}
+
+.delete a{
+    margin-top: 30px;
+    font-size: 1.3em;
+    color: rgb(226, 38, 38);
+    font-family: var(--font-principal);
+    text-decoration: none;
+}
+
+.editar a:hover{
+    color: rgb(0, 132, 0);
+    text-decoration: underline;
+}
+
+.delete a:hover{
+    color: rgb(212, 0, 0);
+    text-decoration: underline;
 }
